<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_following"
            app:layout_constraintEnd_toEndOf="@+id/tv_number_following"
            app:layout_constraintStart_toStartOf="@+id/tv_number_following"
            app:layout_constraintTop_toBottomOf="@+id/tv_number_following" />

        <ImageView
            android:id="@+id/iv_user_detail"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/iv_user_detail"
            app:layout_constraintStart_toStartOf="@+id/iv_user_detail"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_detail" />

        <TextView
            android:id="@+id/tv_number_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="65dp"
            android:gravity="center"
            android:text="@string/tv_number"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/iv_user_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_detail"
            tools:textStyle="bold" />

        <TextView
            android:id="@+id/tv_number_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="56dp"
            android:gravity="center"
            android:text="@string/tv_number"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_user_detail"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_detail"
            tools:textStyle="bold" />

        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_follower"
            app:layout_constraintEnd_toEndOf="@+id/tv_number_followers"
            app:layout_constraintStart_toStartOf="@+id/tv_number_followers"
            app:layout_constraintTop_toBottomOf="@+id/tv_number_followers" />

        <TextView
            android:id="@+id/tv_user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvUser"
            app:layout_constraintEnd_toEndOf="@+id/tv_user_name"
            app:layout_constraintStart_toStartOf="@+id/tv_user_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/iv_user_detail"
            app:layout_constraintEnd_toEndOf="@+id/iv_user_detail"
            app:layout_constraintStart_toStartOf="@+id/iv_user_detail"
            app:layout_constraintTop_toTopOf="@+id/iv_user_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

<!--        <com.google.android.material.tabs.TabItem-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/tv_follower" />-->

<!--        <com.google.android.material.tabs.TabItem-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/tv_following" />-->
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>